# claude-note

./: .gitignore  CLAUDE.md  README.md  claude-note-demo.html  install.sh  pyproject.toml  uninstall.sh
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: article-ru.md  commands.md  configuration.md  document-ingestion.md  getting-started.md  qmd-integration.md  service-setup.md  troubleshooting.md
skills/ingest/: README.md  SKILL.md
skills/ingest/examples/: sample-output.md
skills/ingest/references/: internal-format.md
src/claude_note/: __init__.py  cleaner.py  cli.py  config.py  enqueue.py  file_lock.py  ingest.py  knowledge_pack.py  localization.py  managed_blocks.py  memory_writer.py  models.py  note_router.py  note_writer.py  open_questions.py  prompts_archive.py  queue_manager.py  session_tracker.py  synthesizer.py  transcript_reader.py  vault_indexer.py  version_checker.py  web_api.py  worker.py  worker_manager.py
src/claude_note/static/: index.html
tests/: test_knowledge_pack.py  test_localization.py  test_prompts_archive.py  test_synthesizer.py  test_transcript_reader.py
