[project]
name = "claude-note"
version = "1.0.0"
description = "Session logging and knowledge synthesis for Claude Code"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "claude-note contributors" }
]
keywords = ["claude", "claude-code", "notes", "knowledge-management", "obsidian"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Documentation",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = []  # Pure stdlib, no dependencies

[project.scripts]
claude-note = "claude_note.cli:main"

[project.urls]
Homepage = "https://github.com/artemiin/claude-note"
Repository = "https://github.com/artemiin/claude-note"
Issues = "https://github.com/artemiin/claude-note/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_note"]
